# Seed-Steps

./: LICENSE  README.md  SeedWachi.md  pyproject.toml
seed_steps/: __init__.py  __main__.py  bech32.py  bip32.py  bip39.py  cli.py  entropy.py  explanations.py  format.py  rendering.py  seed.py  tamariz_renderer.py  terminal_style.py  trace.py
tests/: test_bech32.py  test_bip32.py  test_bip39.py  test_cli.py  test_seed.py  test_terminal_style.py
tests/golden/: compact.txt  detailed_default.txt
