[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seed-steps"
version = "0.1.0"
description = "Educational CLI to explain BIP39 mnemonic generation"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["seed_steps*"]
